prevent overflow of display

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
     justify-content: flex-end;
     align-items: flex-end;
     font-size: 50px;
+    overflow: hidden;
 }
 
 .delete-buttons {
